Button up code section

--- a/src/app/feature-pages/coding/catan/catan.component.html
+++ b/src/app/feature-pages/coding/catan/catan.component.html
@@ -9,24 +9,12 @@
                 </div>
                 <div class="series-title">Catan Applet</div>
                 <div class="info-bar">
-                    <div class="date">2020-2021</div>
+                    <div class="date">2018</div>
                     <div class="episodes">3 Episodes</div>
                     <div class="tools">
-                        <div class="tag swift">
-                            <img class="tag-icon" src="/assets/tags/swift.png"/>
-                            <div class="tag-text">Swift</div>
-                        </div>
-                        <div class="tag python">
-                            <img class="tag-icon" src="/assets/tags/python.png"/>
-                            <div class="tag-text">Python</div>
-                        </div>
-                        <div class="tag obj-c">
-                            <img class="tag-icon" src="/assets/tags/obj-c.png"/>
-                            <div class="tag-text">Obj-C</div>
-                        </div>
-                        <div class="tag cv">
-                            <img class="tag-icon" src="/assets/tags/open-cv.png"/>
-                            <div class="tag-text">CV</div>
+                        <div class="tag java">
+                            <img class="tag-icon" src="/assets/tags/java.png"/>
+                            <div class="tag-text">Java</div>
                         </div>
                     </div>
                 </div>
@@ -37,7 +25,7 @@
                     (previously titled "Stitch") fixes this by letting users choose their favorite
                     take for each individual, and "stitching" them together in one optimal frame.
                 </div>
-                <a class="link" href="https://www.google.com" target="_blank">
+                <a class="link" href="https://benji.ar/catan-applet" target="_blank">
                     <div class="play-button">
                         <div class="play"></div>
                         Play
