--- a/src/app/feature-pages/coding/magic-binder-com/magic-binder-com.component.html
+++ b/src/app/feature-pages/coding/magic-binder-com/magic-binder-com.component.html
@@ -9,35 +9,21 @@
                 </div>
                 <div class="series-title">magicbinder.com</div>
                 <div class="info-bar">
-                    <div class="date">2020-2021</div>
+                    <div class="date">2021</div>
                     <div class="episodes">3 Episodes</div>
                     <div class="tools">
-                        <div class="tag swift">
-                            <img class="tag-icon" src="/assets/tags/swift.png"/>
-                            <div class="tag-text">Swift</div>
-                        </div>
-                        <div class="tag python">
-                            <img class="tag-icon" src="/assets/tags/python.png"/>
-                            <div class="tag-text">Python</div>
-                        </div>
-                        <div class="tag obj-c">
-                            <img class="tag-icon" src="/assets/tags/obj-c.png"/>
-                            <div class="tag-text">Obj-C</div>
-                        </div>
-                        <div class="tag cv">
-                            <img class="tag-icon" src="/assets/tags/open-cv.png"/>
-                            <div class="tag-text">CV</div>
+                        <div class="tag angular">
+                            <img class="tag-icon" src="/assets/tags/angular.png"/>
+                            <div class="tag-text">Angular</div>
                         </div>
                     </div>
                 </div>
                 <div class="episode-title">Episode 1: Pilot</div>
                 <div class="episode-description">
-                    It's difficult to take a group photo where no one looks bad, and almost 
-                    impossible to take one where everyone looks their best. The "Cheese App"
-                    (previously titled "Stitch") fixes this by letting users choose their favorite
-                    take for each individual, and "stitching" them together in one optimal frame.
+                    I designed and built multiple versions of this marketing website for Magic Binder with another intern. We used this site, and 10
+                    different ad videos we produced to test our product narrative.
                 </div>
-                <a class="link" href="https://www.google.com" target="_blank">
+                <a class="link" href="https://magicbinder.com/" target="_blank">
                     <div class="play-button">
                         <div class="play"></div>
                         Play
