--- a/src/styles.scss
+++ b/src/styles.scss
@@ -41,3 +41,11 @@ html, body {
 .fullstack {
     background: rgb(99, 99, 255);
 }
+
+.vercel {
+    background: black;
+}
+
+.java {
+    background: #5382a1;
+}
