--- a/src/app/feature-pages/coding/prod-ind/prod-ind.component.html
+++ b/src/app/feature-pages/coding/prod-ind/prod-ind.component.html
@@ -9,24 +9,12 @@
                 </div>
                 <div class="series-title">Productivity Industries</div>
                 <div class="info-bar">
-                    <div class="date">2020-2021</div>
+                    <div class="date">2020</div>
                     <div class="episodes">3 Episodes</div>
                     <div class="tools">
-                        <div class="tag swift">
-                            <img class="tag-icon" src="/assets/tags/swift.png"/>
-                            <div class="tag-text">Swift</div>
-                        </div>
-                        <div class="tag python">
-                            <img class="tag-icon" src="/assets/tags/python.png"/>
-                            <div class="tag-text">Python</div>
-                        </div>
-                        <div class="tag obj-c">
-                            <img class="tag-icon" src="/assets/tags/obj-c.png"/>
-                            <div class="tag-text">Obj-C</div>
-                        </div>
-                        <div class="tag cv">
-                            <img class="tag-icon" src="/assets/tags/open-cv.png"/>
-                            <div class="tag-text">CV</div>
+                        <div class="tag angular">
+                            <img class="tag-icon" src="/assets/tags/angular.png"/>
+                            <div class="tag-text">Angular</div>
                         </div>
                     </div>
                 </div>
