--- a/src/app/feature-pages/coding/willflix/willflix.component.html
+++ b/src/app/feature-pages/coding/willflix/willflix.component.html
@@ -9,35 +9,25 @@
                 </div>
                 <div class="series-title">Willflix</div>
                 <div class="info-bar">
-                    <div class="date">2020-2021</div>
+                    <div class="date">2021</div>
                     <div class="episodes">3 Episodes</div>
                     <div class="tools">
-                        <div class="tag swift">
-                            <img class="tag-icon" src="/assets/tags/swift.png"/>
-                            <div class="tag-text">Swift</div>
+                        <div class="tag angular">
+                            <img class="tag-icon" src="/assets/tags/angular.png"/>
+                            <div class="tag-text">Angular</div>
                         </div>
-                        <div class="tag python">
-                            <img class="tag-icon" src="/assets/tags/python.png"/>
-                            <div class="tag-text">Python</div>
-                        </div>
-                        <div class="tag obj-c">
-                            <img class="tag-icon" src="/assets/tags/obj-c.png"/>
-                            <div class="tag-text">Obj-C</div>
-                        </div>
-                        <div class="tag cv">
-                            <img class="tag-icon" src="/assets/tags/open-cv.png"/>
-                            <div class="tag-text">CV</div>
+                        <div class="tag vercel">
+                            <img class="tag-icon" src="/assets/tags/vercel.png"/>
+                            <div class="tag-text">Vercel</div>
                         </div>
                     </div>
                 </div>
                 <div class="episode-title">Episode 1: Pilot</div>
                 <div class="episode-description">
-                    It's difficult to take a group photo where no one looks bad, and almost 
-                    impossible to take one where everyone looks their best. The "Cheese App"
-                    (previously titled "Stitch") fixes this by letting users choose their favorite
-                    take for each individual, and "stitching" them together in one optimal frame.
+                    The website you are looking at now! I've been meaning to create a website to showcase my work for quite some time.
+                    I designed the Netflix-themed portfolio in Adobe XD and built it out in Angular. I figured it was a more interesting way to go through projects.
                 </div>
-                <a class="link" href="https://www.google.com" target="_blank">
+                <a class="link" href="https://github.com/willhoppin/will-personal-website" target="_blank">
                     <div class="play-button">
                         <div class="play"></div>
                         Play
