finalize faux features for videos

--- a/src/app/feature-pages/coding/willflix/willflix.component.html
+++ b/src/app/feature-pages/coding/willflix/willflix.component.html
@@ -25,7 +25,7 @@
                 <div class="episode-title">Episode 1: Pilot</div>
                 <div class="episode-description">
                     The website you are looking at now! I've been meaning to create a website to showcase my work for quite some time.
-                    I designed the Netflix-themed portfolio in Adobe XD and built it out in Angular. I figured it was a more interesting way to go through projects.
+                    I designed this Netflix-themed portfolio in Adobe XD and built it out in Angular. I figured it was a more interesting way to go through my projects...
                 </div>
                 <a class="link" href="https://github.com/willhoppin/will-personal-website" target="_blank">
                     <div class="play-button">
