--- a/src/app/feature-pages/coding/prod-ind/prod-ind.component.html
+++ b/src/app/feature-pages/coding/prod-ind/prod-ind.component.html
@@ -21,7 +21,7 @@
                 <div class="episode-title">Episode 1: Pilot</div>
                 <div class="episode-description">
                     Productivity Industries is the parent company for Magic Binder (and a few other exciting products on the way).
-                    Our mission is to enable working professionals to automate trivial tasks. I built and designed the company website, linked below.
+                    Our mission is to enable working professionals to automate trivial tasks. I built and designed the company website, linked below (hit the play button!).
                 </div>
                 <a class="link" href="https://productivityindustries.com/" target="_blank">
                     <div class="play-button">
