--- a/src/app/feature-pages/coding/prod-ind/prod-ind.component.scss
+++ b/src/app/feature-pages/coding/prod-ind/prod-ind.component.scss
@@ -35,6 +35,9 @@
     ),
     url('/assets/covers/pi-cover.jpg');
     }
+    background-size: cover;
+    background-repeat: no-repeat;
+    color: white;
 
     @media (max-width: 422px) {
         margin-top: -140px !important;
