--- a/src/app/feature-pages/coding/catan/catan.component.html
+++ b/src/app/feature-pages/coding/catan/catan.component.html
@@ -20,10 +20,9 @@
                 </div>
                 <div class="episode-title">Episode 1: Pilot</div>
                 <div class="episode-description">
-                    It's difficult to take a group photo where no one looks bad, and almost 
-                    impossible to take one where everyone looks their best. The "Cheese App"
-                    (previously titled "Stitch") fixes this by letting users choose their favorite
-                    take for each individual, and "stitching" them together in one optimal frame.
+                    I built this Java Applet – a parred-down version of the popular board game Settlers of Catan – 
+                    with a friend in college. I was responsible for programming the math documents, which used
+                    hashing to determine relationships between roads, settlements, and hexes on any size board.
                 </div>
                 <a class="link" href="https://benji.ar/catan-applet" target="_blank">
                     <div class="play-button">
