--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
         <div class="section-one">
             <div class="main-text-wrap">
                 <div class="main-title">Will Hoppin</div>
-                <div class="main-description">In this "rags to rags" story, a determined junior at Middlebury College (on the dual degree track with Columbia University Engineering) does everything he can to secure jobs and internships with his B.A. in film and B.S. in computer science. Little does he know, he's going to end up in his parents' basement after graduation...</div>
+                <div class="main-description">In this "rags to rags" story, a determined junior at Middlebury College does everything he can to appear successful. Little does he know, he's going to end up in his parents' basement after graduation...</div>
             </div>
             <div class="buttons-wrapper">
                 <a class="link" href="https://vimeo.com/willhoppin" target="_blank">
