--- a/src/app/home/home.component.scss
+++ b/src/app/home/home.component.scss
@@ -28,7 +28,7 @@
         rgba(17, 18, 21, 0),
         rgba(17, 18, 21, 1)
     ),
-    url('/assets/covers/main-cover.jpg');
+    url('/assets/covers/main-cover.png');
     background-size: cover;
     background-repeat: no-repeat;
     color: white;
@@ -41,7 +41,7 @@
         rgba(17, 18, 21, 0.4),
         rgba(17, 18, 21, 1)
     ),
-    url('/assets/covers/main-cover.jpg');
+    url('/assets/covers/main-cover.png');
     }
     background-size: cover;
     background-repeat: no-repeat;
