update instagram link

--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -17,7 +17,7 @@
     <a class="link" href="https://twitter.com/willyhopps?lang=en" target="_blank">
         <img class="social-icon" src="/assets/socials/twitter.png"/>
     </a>
-    <a class="link" href="https://instagram.com/willyhoppsfans?utm_medium=copy_link" target="_blank">
+    <a class="link" href="https://www.instagram.com/willhoppin/" target="_blank">
         <img class="social-icon" src="/assets/socials/instagram.png"/>
     </a>
     <a class="link" href="mailto:whoppin@middlebury.edu">
