update more info

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -13,7 +13,7 @@
                         Play
                     </div>
                 </a>
-                <a class="link" href="https://www.linkedin.com/in/will-hoppin/" target="_blank">
+                <a class="link" href="https://drive.google.com/file/d/1jwCOb9ZlYNH2C8EFXRfxKtYPvzXUiJy0/view?usp=sharing" target="_blank">
                     <div class="about-wrapper">
                         <div class="about-text">More Info</div>
                         <div class="about-button"></div>
