--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,7 +4,7 @@
         <div class="section-one">
             <div class="main-text-wrap">
                 <div class="main-title">Will Hoppin</div>
-                <div class="main-description">In this "rags to rags" story, a determined junior at Middlebury College does everything he can to start a career in VR/AR software engineering. Little does he know, he's going to end up in his parents' basement after graduation...</div>
+                <div class="main-description">In this "rags to rags" story, a determined junior at Columbia University does everything he can to become an international superstar. Little does he know, he's going to end up in his parents' basement after graduation...</div>
             </div>
             <div class="buttons-wrapper">
                 <a class="link" href="https://vimeo.com/willhoppin" target="_blank">
