--- a/src/app/faux-feature/faux-feature.component.scss
+++ b/src/app/faux-feature/faux-feature.component.scss
@@ -6,6 +6,7 @@
     transition: 0.2s ease-in-out;
     margin-top: 10px;
     cursor: pointer;
+    display: flex;
 
     &:hover {
         box-shadow: 0px 0px 10px rgba(255, 255, 255, 0.3);
@@ -16,5 +17,24 @@
 
 .w-logo {
     width: 25px;
+    height: 28px;
     margin: 8px;
+}
+
+.laurel {
+    width: 36px;
+    border-radius: 100%;
+}
+
+.laurel-number {
+    color: white;
+    margin-top: -31px;
+    margin-left: 14px;
+    font-weight: bold;
+    font-size: 14px;
+}
+
+.laurel-wrapper {
+    margin: 5px 8px 8px 75px;
+    cursor: pointer;
 }
