--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -26,7 +26,7 @@
             <div class="trending-text">Films</div>
             <div class="features-wrapper">
                 <div *ngFor="let feature of films">
-                    <app-faux-feature [image]="feature.image" [link]="feature.link"></app-faux-feature>
+                    <app-faux-feature [image]="feature.image" [link]="feature.link" [awards]="feature.awards"></app-faux-feature>
                 </div>
             </div>
         </div>
