--- a/src/app/faux-feature/faux-feature.component.scss
+++ b/src/app/faux-feature/faux-feature.component.scss
@@ -32,6 +32,7 @@
     margin-left: 14px;
     font-weight: bold;
     font-size: 14px;
+    text-decoration: none;
 }
 
 .laurel-wrapper {
@@ -47,6 +48,7 @@
 }
 
 .awards-widget {
+    color: black;
     background: white;
     display: none;
     position: absolute;
