--- a/src/app/faux-feature/faux-feature.component.html
+++ b/src/app/faux-feature/faux-feature.component.html
@@ -1,14 +1,16 @@
 <a [href]="link" target="_blank">
     <div class="feature-wrap" [ngStyle]="{ 'background' : 'url(' + image + ')', 'background-size' : 'cover', 'background-position' : 'center' }">
         <img class="w-logo" src="/assets/w-logo.png"/>
-        <div class="laurel-wrapper" *ngIf="awards.length > 0">
-            <img class="laurel" src="/assets/laurel.png"/>
-            <div class="laurel-number">{{awards.length}}</div>
-            <div *ngIf="awards.length > 0" class="awards-widget">
-                <div *ngFor="let award of awards">
-                    <div class="awards-widget-item">⭐ {{award}}</div>
+        <a [routerLink]="">
+            <div class="laurel-wrapper" *ngIf="awards.length > 0">
+                <img class="laurel" src="/assets/laurel.png"/>
+                <div class="laurel-number">{{awards.length}}</div>
+                <div *ngIf="awards.length > 0" class="awards-widget">
+                    <div *ngFor="let award of awards">
+                        <div class="awards-widget-item">⭐ {{award}}</div>
+                    </div>
                 </div>
             </div>
-        </div>
+        </a>
     </div>
 </a>
