--- a/src/app/feature-pages/coding/magic-binder/magic-binder.component.html
+++ b/src/app/feature-pages/coding/magic-binder/magic-binder.component.html
@@ -32,9 +32,9 @@
                 </div>
                 <div class="episode-title">Episode 1: Pilot</div>
                 <div class="episode-description">
-                    While I can’t share much about the product at this time, Magic Binder was the first production environment I got to contribute to. I built components from scratch and fixed bugs on the frontend, and wrote queries and services (using Akita for reactive state management) on the backend.
+                    While I can’t share much about the product at this time, Magic Binder (now called BNDR) was the first production environment I got to contribute to. I built components from scratch and fixed bugs on the frontend, and wrote queries and services (using Akita for reactive state management) on the backend.
                 </div>
-                <a class="link" href="https://app.magicbinder.com" target="_blank">
+                <a class="link" href="https://www.bndr.app/" target="_blank">
                     <div class="play-button">
                         <div class="play"></div>
                         Play
