--- a/src/styles.scss
+++ b/src/styles.scss
@@ -18,6 +18,14 @@ html, body {
     background: #3374A8;
 }
 
+.csharp {
+    background: #8A42A7;
+}
+
+.unity {
+    background: #000000;
+}
+
 .obj-c {
     background: black;
 }
