--- a/src/app/feature-pages/coding/darpa/darpa.component.html
+++ b/src/app/feature-pages/coding/darpa/darpa.component.html
@@ -26,7 +26,7 @@
                 <div class="episode-description">
                     Worked under Steven K. Feiner (Ph.D.) in the Columbia University Computer Graphics and User Interfaces Lab on classified DARPA-funded research. Used Unity and C# to program collaboration environments for the 75th Ranger Regiment (DARPA, or the Defense Advanced Research Projects Agency, is a research and development agency of the United States Department of Defense responsible for the development of emerging technologies for use by the military).
                 </div>
-                <a class="link" href="https://app.magicbinder.com/binders/3df45e68-37dd-4be4-a8bd-af55879b8f99" target="_blank">
+                <a class="link" href="https://www.darpa.mil/" target="_blank">
                     <div class="play-button">
                         <div class="play"></div>
                         Play
