--- a/src/app/feature-pages/coding/catan/catan.component.html
+++ b/src/app/feature-pages/coding/catan/catan.component.html
@@ -24,7 +24,7 @@
                     with a friend in college. I was responsible for programming the math documents, which used
                     hashing to determine relationships between roads, settlements, and hexes on any size board.
                 </div>
-                <a class="link" href="https://benji.ar/catan-applet" target="_blank">
+                <a class="link" href="https://github.com/willhoppin/catan_applet" target="_blank">
                     <div class="play-button">
                         <div class="play"></div>
                         Play
