update expired links

--- a/src/app/feature-pages/coding/cheese/cheese.component.html
+++ b/src/app/feature-pages/coding/cheese/cheese.component.html
@@ -37,7 +37,7 @@
                     (previously titled "Stitch") fixes this by letting users choose their favorite
                     take for each individual, and "stitching" them together in one optimal frame.
                 </div>
-                <a class="link" href="https://drive.google.com/drive/folders/1fCAaddObFsGifFA_XASnTmHGPa9hW0Lt?usp=sharing" target="_blank">
+                <a class="link" href="https://app.bndr.app/binders/3df45e68-37dd-4be4-a8bd-af55879b8f99" target="_blank">
                     <div class="play-button">
                         <div class="play"></div>
                         Play
