--- a/src/app/feature-pages/coding/darpa/darpa.component.html
+++ b/src/app/feature-pages/coding/darpa/darpa.component.html
@@ -24,7 +24,7 @@
                 </div>
                 <div class="episode-title">Episode 1: Pilot</div>
                 <div class="episode-description">
-                    Worked under Steven K. Feiner (Ph.D.) in the Columbia University Computer Graphics and User Interfaces Lab on classified DARPA-funded research. Used Unity and C# to program collaboration environments for the 75th Ranger Regiment (DARPA, or the Defense Advanced Research Projects Agency, is a research and development agency of the United States Department of Defense responsible for the development of emerging technologies for use by the military).
+                    Worked under Steven K. Feiner (Ph.D.) in the Columbia University Computer Graphics and User Interfaces Lab on classified DARPA-funded research (DARPA, or the Defense Advanced Research Projects Agency, is a research and development agency of the United States Department of Defense responsible for the development of emerging technologies for use by the military). Used Unity and C# to program collaboration environments for the 75th Ranger Regiment.
                 </div>
                 <a class="link" href="https://www.darpa.mil/" target="_blank">
                     <div class="play-button">
