change youtube link

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -7,7 +7,7 @@
                 <div class="main-description">In this "rags to rags" story, a determined Columbia University grad does everything he can to become an international superstar. Little does he know, he's going to end up in his parents' basement...</div>
             </div>
             <div class="buttons-wrapper">
-                <a class="link" href="https://drive.google.com/file/d/1giEcbAh_84XYlSP1kVMV3y_I4E0j8gPt/view" target="_blank">
+                <a class="link" href="https://youtu.be/bTbUVPio-Ec" target="_blank">
                     <div class="play-button">
                         <div class="play"></div>
                         Play
